# mgpm

./: Cargo.toml  Dockerfile  README.md  Taskfile.yml  compose.yml  packagelist.yml
.devcontainer/: devcontainer.json
script/: install.sh
src/: main.rs  packagelist.rs
src/commands/: install.rs  list.rs  remove.rs
