[package]
name = "mgpm"
version = "0.1.2"
edition = "2021"
authors = ["mountain-gorilla-inc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4.5"
